# rs-pfcp

./: .git-hooks-setup.md  .gitignore  3GPP_COMPLIANCE_REPORT.md  API_GUIDE.md  BUILDER_PATTERN_ANALYSIS.md  BUILDER_PATTERN_ENHANCEMENT_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCUMENTATION_MIGRATION.md  DOC_RESTRUCTURE_PROPOSAL.md  EXAMPLES_GUIDE.md  GEMINI.md  IE_SUPPORT.md  IMPLEMENTATION_COMPLETE.md  LIBRARY_ASSESSMENT.md  PFCP_IE_COMPLIANCE_REPORT.md  PFCP_MESSAGES.md  PHASE1_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  README.md  USAGE_REPORT_ANALYSIS.md  ZERO_LENGTH_IE_ANALYSIS.md  ZERO_LENGTH_IE_TODO.md  check_missing_ies.sh  cliff.toml  deny.toml  pfcp_ie_analysis.md
.claude/: README.md  claude-guide.md
.github/: README.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmarks.yml  ci.yml  coverage.yml  security.yml
.kiro/settings/: lsp.json
benches/: comparison_operations.rs  comprehensive_performance.rs  ie_operations.rs  ie_performance.rs  message_operations.rs  phase_performance.rs
benchmarks/: BENCHMARK_RESULTS.md  COMPLETE_BENCHMARK_COMPARISON.md  README.md  debug_parser.rs  run_performance_analysis.sh  test-parser.rs
benchmarks/go/: go.mod  pfcp_marshal_specific_test.go  pfcp_marshal_test.go  pfcp_unmarshal_test.go
benchmarks/results/: PERFORMANCE_SUMMARY.md
benchmarks/rust/: Cargo.toml
benchmarks/rust/benches/: pfcp_marshal.rs  pfcp_roundtrip.rs  pfcp_unmarshal.rs
benchmarks/scripts/: compare-results.py  run-benchmarks.sh
docs/: API-STABILITY.md  COVERAGE.md  MIGRATION-0.2.md  README.md  picoup-rust-recommendations.md
docs/analysis/: Contents Ch 8 3GPP TS 29.244 version 18.10.txt  README.md  builder-ergonomics-improvement-plan.md  ergonomics-improvements.md  missing-ie-implementation-plan.md  missing-ies-implementation-plan.md  test-coverage-plan.md
docs/architecture/: README.md  binary-protocol.md  builder-patterns.md  error-handling.md  extension-points.md  ie-layer.md  message-layer.md  overview.md  performance.md  pfcp-proxy-loadbalancer-design.md  security.md  testing-strategy.md
docs/development/: README.md  git-hooks.md
docs/guides/: README.md  advanced-5g-features.md  api-guide.md  benchmarking.md  builder-guide.md  comparison-guide.md  cookbook.md  coverage.md  examples-guide.md  quickstart.md  session-report-demo.md  troubleshooting.md  v0.3.0-migration.md
docs/reference/: 3gpp-compliance.md  README.md  ie-compliance.md  ie-support.md  messages.md
examples/: SESSION_REPORT_DEMO.md  advanced_5g_features.rs  advanced_session_management.rs  advanced_session_management.rs.disabled  comprehensive_pfcp_features.rs  debug_ie_parser.rs  debug_parser.rs  error-handling-demo.rs  ethernet-session-demo.rs  message-comparison.rs  pdn-type-demo.rs  pdn-type-simple.rs  pfcp-proxy-README.md  pfcp-proxy-demo.rs  test_real_messages.rs  test_session_report.sh  usage_report_demo.rs  usage_report_phase1_demo.rs  usage_report_phase2_demo.rs  usage_report_quota_demo.rs
examples/header-length-test/: main.rs
examples/heartbeat-client/: main.rs
examples/heartbeat-server/: main.rs
examples/pcap-reader/: main.rs
examples/session-client/: main.rs
examples/session-server/: main.rs
go-interop/: README.md  go.mod  session-client  session-client.go  session-server  session-server.go  simple-server  simple-server.go  test-all-compatibility.sh  test-basic-compatibility.sh  test-go-server-rust-client.sh  test-rust-server-go-client.sh
scripts/: install-hooks.sh  pre-commit  release.sh
src/: error.rs  lib.rs  types.rs
src/comparison/: builder.rs  diff.rs  mod.rs  options.rs  result.rs  semantic.rs
src/ie/: access_availability_control_information.rs  access_availability_information.rs  access_availability_report.rs  activate_predefined_rules.rs  activation_time.rs  additional_monitoring_time.rs  additional_usage_reports_information.rs  aggregated_urr_id.rs  aggregated_urrs.rs  alternate_smf_ip_address.rs  alternative_smf_ip_address.rs  apn_dnn.rs  application_detection_information.rs  application_id.rs  application_ids_pfds.rs  application_instance_id.rs  apply_action.rs  area_session_id.rs  atsss_ll.rs  average_packet_delay.rs  averaging_window.rs  bar.rs  bar_id.rs  bridge_management_information_container.rs  c_tag.rs  cause.rs  configured_time_domain.rs  cp_function_features.rs  cp_ip_address.rs  cp_pfcp_entity_ip_address.rs  create_bar.rs  create_bridge_info_for_tsc.rs  create_far.rs  create_pdr.rs  create_qer.rs  create_traffic_endpoint.rs  create_urr.rs  created_bridge_info_for_tsc.rs  created_pdr.rs  created_traffic_endpoint.rs  (+242 more)
src/message/: association_release_request.rs  association_release_response.rs  association_setup_request.rs  association_setup_response.rs  association_update_request.rs  association_update_response.rs  display.rs  header.rs  heartbeat_request.rs  heartbeat_response.rs  ie_iter.rs  mod.rs  node_report_request.rs  node_report_response.rs  pfd_management_request.rs  pfd_management_response.rs  session_deletion_request.rs  session_deletion_response.rs  session_establishment_request.rs  session_establishment_response.rs  session_modification_request.rs  session_modification_response.rs  session_report_request.rs  (+6 more)
tests/: fixtures.rs  ie_iteration_tests.rs  messages.rs  phase1_integration.rs  phase2_integration.rs  phase3_integration.rs  session_establishment_integration.rs  test_new_messages.rs  update_bar_tests.rs
(+50 files in other folders)
