[package]
name = "rs-pfcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "High-performance Rust implementation of PFCP (Packet Forwarding Control Protocol) for 5G networks with 100% 3GPP TS 29.244 Release 18 compliance"
authors = ["xandlom"]
repository = "https://github.com/xandlom/rs-pfcp"
documentation = "https://docs.rs/rs-pfcp"
homepage = "https://github.com/xandlom/rs-pfcp"
readme = "README.md"
keywords = ["pfcp", "5g", "telecom", "protocol", "networking"]
categories = ["network-programming", "parser-implementations"]
rust-version = "1.70"

[dependencies]
anyhow = "1.0.100"
bitflags = "2.9.4"
clap = { version = "4.5.48", features = ["derive"] }
network-interface = "2.0.3"
pcap-file = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[[example]]
name = "heartbeat-client"
path = "examples/heartbeat-client/main.rs"

[[example]]
name = "heartbeat-server"
path = "examples/heartbeat-server/main.rs"

[[example]]
name = "session-client"
path = "examples/session-client/main.rs"

[[example]]
name = "session-server"
path = "examples/session-server/main.rs"

[[example]]
name = "pcap-reader"
path = "examples/pcap-reader/main.rs"

[[example]]
name = "header-length-test"
path = "examples/header-length-test/main.rs"
