[package]
name = "rs-pfcp"
version = "0.2.5"
edition = "2021"
license = "Apache-2.0"
description = "High-performance Rust implementation of PFCP (Packet Forwarding Control Protocol) for 5G networks with 100% 3GPP TS 29.244 Release 18 compliance"
authors = ["xandlom"]
repository = "https://github.com/xandlom/rs-pfcp"
documentation = "https://docs.rs/rs-pfcp"
homepage = "https://github.com/xandlom/rs-pfcp"
readme = "README.md"
keywords = ["pfcp", "5g", "telecom", "protocol", "networking"]
categories = ["network-programming", "parser-implementations"]
rust-version = "1.90.0"
exclude = [
    "go-interop/session-server",
    "go-interop/session-client",
    "go-interop/simple-server",
    "go-interop/*.sh",
    "benchmarks/data/results/",
    "benchmarks/scripts/",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
clap = { version = "4.5.54", features = ["derive"] }
network-interface = "2.0.5"
pcap-file = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"

[[example]]
name = "heartbeat-client"
path = "examples/heartbeat-client/main.rs"

[[example]]
name = "heartbeat-server"
path = "examples/heartbeat-server/main.rs"

[[example]]
name = "session-client"
path = "examples/session-client/main.rs"

[[example]]
name = "session-server"
path = "examples/session-server/main.rs"

[[example]]
name = "pcap-reader"
path = "examples/pcap-reader/main.rs"

[[example]]
name = "header-length-test"
path = "examples/header-length-test/main.rs"

[[example]]
name = "ethernet-session-demo"
path = "examples/ethernet-session-demo.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "message_operations"
harness = false

[[bench]]
name = "ie_operations"
harness = false

[[bench]]
name = "comprehensive_performance"
harness = false

[[bench]]
name = "phase_performance"
harness = false
