[package]
name = "pfcp-rust-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
rs-pfcp = { path = "../../" }
criterion = { version = "0.3", features = ["html_reports"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[[bench]]
name = "pfcp_marshal"
harness = false

[[bench]]
name = "pfcp_unmarshal"  
harness = false

[[bench]]
name = "pfcp_roundtrip"
harness = false
